[gd_scene load_steps=6 format=2]

[ext_resource path="res://Xbox_button_X.svg.png" type="Texture" id=1]
[ext_resource path="res://playbutton.png" type="Texture" id=2]
[ext_resource path="res://header.jpg" type="Texture" id=3]
[ext_resource path="res://play.gd" type="Script" id=4]
[ext_resource path="res://quit.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0, 0.156863, 1 )

[node name="buttons" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_right = 250.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
color = Color( 0.25098, 0.0784314, 0.392157, 1 )

[node name="play" type="TextureButton" parent="buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -314.0
margin_right = 248.0
margin_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 250, 250 )
texture_normal = ExtResource( 2 )
script = ExtResource( 4 )

[node name="quit" type="TextureButton" parent="buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -415.0
margin_right = 512.0
margin_bottom = 609.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 500, 500 )
texture_normal = ExtResource( 1 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -196.0
margin_right = 20.0
margin_bottom = -156.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 500, 400 )
texture = ExtResource( 3 )

[connection signal="mouse_entered" from="buttons/play" to="buttons/play" method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="buttons/play" to="buttons/play" method="_on_play_mouse_exited"]
[connection signal="pressed" from="buttons/play" to="buttons/play" method="_on_play_pressed"]
[connection signal="pressed" from="buttons/quit" to="buttons/quit" method="_on_quit_pressed"]
